Agrego filas, columnas y color al fondo. Pinto Coin y Player.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript desde 0</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JavaScript desde 0</title>
 </head>
 
 <body>
 
 </body>
 <link rel="stylesheet" type="text/css" href="./sytle.css">
+<script src="./vector.js"></script>
+<script src="./coin.js"></script>
+<script src="./lava.js"></script>
+<script src="./player.js"></script>
 <script src="./level.js"></script>
 <script src="./display.js"></script>
 <script src="./index.js"></script>
