Funciones para animaciones

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="./lava.js"></script>
 <script src="./player.js"></script>
 <script src="./level.js"></script>
+<script src="./levels.js"></script>
 <script src="./display.js"></script>
 <script src="./index.js"></script>
 
